force-app/main/default/objects/Global_Unit_Of_Measurement__c/Global_Unit_Of_Measurement__c.object-meta.xml
<CustomObject>
    <label>Global Unit of Measurement</label>
    <nameField>
        <label>Global Unit of Measurement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Unit of Measurements</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>