force-app/main/default/objects/Global_Unit_Of_Measurement__c/fields/RDS_Description__c.field-meta.xml
<CustomField>
    <fullName>RDS_Description__c</fullName>
    <label>Description</label>
    <length>10</length>
    <type>Text</type>
</CustomField>