force-app/main/default/objects/Global_Unit_Of_Measurement__c/fields/RDS_Master_Config__c.field-meta.xml
<CustomField>
    <fullName>RDS_Master_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Config</label>
    <referenceTo>Master__c</referenceTo>
    <relationshipLabel>Global Unit of Measurements</relationshipLabel>
    <relationshipName>Global_Unit_of_Measurements</relationshipName>
    <type>Lookup</type>
</CustomField>