force-app/main/default/objects/Global_Unit_Of_Measurement__c/fields/RDS_Unit_of_Measurement_Code__c.field-meta.xml
<CustomField>
    <fullName>RDS_Unit_of_Measurement_Code__c</fullName>
    <label>Unit of Measurement Code</label>
    <length>3</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>